@@ -1,7 +1,6 @@
 package io.quarkus.test.bootstrap;
 
-import static io.quarkus.test.services.quarkus.model.QuarkusProperties.QUARKUS_ANALYTICS_DISABLED_LOCAL_PROP_KEY;
-import static java.lang.String.format;
+import static io.quarkus.test.services.quarkus.model.QuarkusProperties.createDisableBuildAnalyticsProperty;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
@@ -11,13 +10,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Objects;
+import java.util.regex.Pattern;
 
 import io.quarkus.test.configuration.PropertyLookup;
 import io.quarkus.test.logging.FileLoggingHandler;
 import io.quarkus.test.logging.Log;
 import io.quarkus.test.services.quarkus.CliDevModeLocalhostQuarkusApplicationManagedResource;
+import io.quarkus.test.services.quarkus.CliDevModeVersionLessQuarkusApplicationManagedResource;
 import io.quarkus.test.services.quarkus.model.QuarkusProperties;
 import io.quarkus.test.utils.FileUtils;
 import io.quarkus.test.utils.ProcessBuilderProvider;
@@ -27,7 +27,9 @@ public class QuarkusCliClient {
     public static final String COMMAND_LOG_FILE = "quarkus-cli-command.out";
     public static final String DEV_MODE_LOG_FILE = "quarkus-cli-dev.out";
 
+    private static final String QUARKUS_UPSTREAM_VERSION = "999-SNAPSHOT";
     private static final String BUILD = "build";
+    private static final String DEV = "dev";
     private static final PropertyLookup COMMAND = new PropertyLookup("ts.quarkus.cli.cmd", "quarkus");
     private static final Path TARGET = Paths.get("target");
 
@@ -49,7 +51,7 @@ public class QuarkusCliClient {
         List<String> args = new ArrayList<>();
         args.add(BUILD);
         args.addAll(Arrays.asList(extraArgs));
-        return runCliAndWait(serviceFolder, args.toArray(new String[args.size()]));
+        return runCliAndWait(serviceFolder, args.toArray(new String[0]));
     }
 
     public Result buildApplicationOnNative(Path serviceFolder, String... extraArgs) {
@@ -57,7 +59,7 @@ public class QuarkusCliClient {
         args.add(BUILD);
         args.add("--native");
         args.addAll(Arrays.asList(extraArgs));
-        return runCliAndWait(serviceFolder, args.toArray(new String[args.size()]));
+        return runCliAndWait(serviceFolder, args.toArray(new String[0]));
     }
 
     public Process runOnDev(Path servicePath, File logOutput, Map<String, String> arguments) {
@@ -65,8 +67,13 @@ public class QuarkusCliClient {
         cmd.add("dev");
         cmd.addAll(arguments.entrySet().stream()
                 .map(e -> "-D" + e.getKey() + "=" + e.getValue())
-                .collect(Collectors.toList()));
-        return runCli(servicePath, logOutput, cmd.toArray(new String[cmd.size()]));
+                .toList());
+        return runCli(servicePath, logOutput, cmd.toArray(new String[0]));
+    }
+
+    public QuarkusCliRestService createApplicationAt(String name, String targetFolderName) {
+        Objects.requireNonNull(targetFolderName);
+        return createApplication(name, CreateApplicationRequest.defaults(), targetFolderName);
     }
 
     public QuarkusCliRestService createApplication(String name) {
@@ -74,17 +81,21 @@ public class QuarkusCliClient {
     }
 
     public QuarkusCliRestService createApplication(String name, CreateApplicationRequest request) {
-        QuarkusCliRestService service = new QuarkusCliRestService(this);
+        return createApplication(name, request, null);
+    }
+
+    public QuarkusCliRestService createApplication(String name, CreateApplicationRequest request, String targetFolderName) {
+        Path serviceFolder = isNotEmpty(targetFolderName) ? TARGET.resolve(targetFolderName).resolve(name) : null;
+        QuarkusCliRestService service = new QuarkusCliRestService(this, serviceFolder);
         ServiceContext serviceContext = service.register(name, context);
 
-        service.init(s -> new CliDevModeLocalhostQuarkusApplicationManagedResource(serviceContext, this));
+        service.init(request.managedResourceCreator.initBuilder(serviceContext, this));
 
         // We need the service folder to be emptied before generating the project
         FileUtils.deletePath(serviceContext.getServiceFolder());
 
         // Generate project
-        List<String> args = new ArrayList<>();
-        args.addAll(Arrays.asList("create", "app", name));
+        List<String> args = new ArrayList<>(Arrays.asList("create", "app", name));
         // Platform Bom
         if (isNotEmpty(request.platformBom)) {
             args.add("--platform-bom=" + request.platformBom);
@@ -95,17 +106,58 @@ public class QuarkusCliClient {
         }
         // Extensions
         if (request.extensions != null && request.extensions.length > 0) {
-            args.add("-x=" + Stream.of(request.extensions).collect(Collectors.joining(",")));
+            args.add("-x=" + String.join(",", request.extensions));
         }
         // Extra args
         if (request.extraArgs != null && request.extraArgs.length > 0) {
-            Stream.of(request.extraArgs).forEach(args::add);
+            args.addAll(Arrays.asList(request.extraArgs));
         }
 
-        Result result = runCliAndWait(serviceContext.getServiceFolder().getParent(), args.toArray(new String[args.size()]));
+        Result result = runCliAndWait(serviceContext.getServiceFolder().getParent(), args.toArray(new String[0]));
         assertTrue(result.isSuccessful(), "The application was not created. Output: " + result.getOutput());
 
         return service;
+    }
+
+    public QuarkusCliRestService createApplicationFromExistingSources(String name, String targetFolderName, Path sourcesDir) {
+        return createApplicationFromExistingSources(name, targetFolderName, sourcesDir,
+                ((serviceContext,
+                        quarkusCliClient) -> managedResCreator -> new CliDevModeVersionLessQuarkusApplicationManagedResource(
+                                serviceContext, quarkusCliClient)));
+    }
+
+    public QuarkusCliRestService createApplicationFromExistingSources(String name, String targetFolderName, Path sourcesDir,
+            ManagedResourceCreator managedResourceCreator) {
+        Path serviceFolder = isNotEmpty(targetFolderName) ? TARGET.resolve(targetFolderName).resolve(name) : null;
+        QuarkusCliRestService service = new QuarkusCliRestService(this, serviceFolder);
+        ServiceContext serviceContext = service.register(name, context);
+
+        service.init(managedResourceCreator.initBuilder(serviceContext, this));
+
+        // We need the service folder to be emptied before generating the project
+        FileUtils.deletePath(serviceContext.getServiceFolder());
+
+        FileUtils.copyDirectoryTo(sourcesDir, serviceContext.getServiceFolder());
+
+        return service;
+    }
+
+    public Result updateApplication(UpdateApplicationRequest request, Path serviceFolder) {
+        List<String> args = new ArrayList<>(List.of("update"));
+
+        // stream
+        if (isNotEmpty(request.stream)) {
+            args.add("--stream=" + request.stream);
+        }
+
+        // platform-version
+        if (isNotEmpty(request.platformVersion)) {
+            args.add("--platform-version=" + request.platformVersion);
+        }
+
+        Result result = runCliAndWait(serviceFolder, args.toArray(new String[0]));
+        assertTrue(result.isSuccessful(), "The application was not updated. Output: " + result.getOutput());
+        return result;
     }
 
     private static boolean isNotEmpty(String str) {
@@ -136,10 +188,10 @@ public class QuarkusCliClient {
         }
         // Extra args
         if (request.extraArgs != null && request.extraArgs.length > 0) {
-            Stream.of(request.extraArgs).forEach(args::add);
+            args.addAll(Arrays.asList(request.extraArgs));
         }
 
-        Result result = runCliAndWait(serviceContext.getServiceFolder().getParent(), args.toArray(new String[args.size()]));
+        Result result = runCliAndWait(serviceContext.getServiceFolder().getParent(), args.toArray(new String[0]));
         assertTrue(result.isSuccessful(), "The extension was not created. Output: " + result.getOutput());
 
         return service;
@@ -173,11 +225,11 @@ public class QuarkusCliClient {
         cmd.addAll(Arrays.asList(COMMAND.get().split(" ")));
         cmd.addAll(Arrays.asList(args));
 
-        if (QuarkusProperties.disableBuildAnalytics()) {
-            cmd.add(format("-D%s=%s", QUARKUS_ANALYTICS_DISABLED_LOCAL_PROP_KEY, Boolean.TRUE));
+        if (commandSendsAnalytics(cmd) && QuarkusProperties.disableBuildAnalytics()) {
+            cmd.add(createDisableBuildAnalyticsProperty());
         }
 
-        Log.info(cmd.stream().collect(Collectors.joining(" ")));
+        Log.info(String.join(" ", cmd));
         try {
             return ProcessBuilderProvider.command(cmd)
                     .redirectErrorStream(true)
@@ -189,15 +241,65 @@ public class QuarkusCliClient {
         }
     }
 
+    private static boolean commandSendsAnalytics(List<String> commands) {
+        return commands.stream().anyMatch(cmd -> BUILD.equalsIgnoreCase(cmd) || DEV.equalsIgnoreCase(cmd));
+    }
+
+    private static boolean isUpstream() {
+        return isUpstream(QuarkusProperties.getVersion());
+    }
+
+    private static boolean isUpstream(String version) {
+        return version.contains(QUARKUS_UPSTREAM_VERSION);
+    }
+
+    private static String getFixedStreamVersion() {
+        var rawVersion = QuarkusProperties.getVersion();
+        if (isUpstream(rawVersion)) {
+            throw new IllegalStateException("Cannot set fixed stream version for '%s' as it doesn't exist" + rawVersion);
+        }
+
+        String[] version = rawVersion.split(Pattern.quote("."));
+        return String.format("%s.%s", version[0], version[1]);
+    }
+
+    private static String getCurrentPlatformBom() {
+        return QuarkusProperties.PLATFORM_GROUP_ID.get() + "::" + QuarkusProperties.getVersion();
+    }
+
+    public Result listExtensions(String... extraArgs) {
+        return listExtensions(ListExtensionRequest.defaults(), extraArgs);
+    }
+
+    public Result listExtensions(ListExtensionRequest request, String... extraArgs) {
+        List<String> args = new ArrayList<>();
+        args.add("extension");
+        args.add("list");
+        args.addAll(Arrays.asList(extraArgs));
+        if (request.stream() != null) {
+            args.addAll(Arrays.asList("--stream", request.stream()));
+        }
+        var result = run(args.toArray(String[]::new));
+        assertTrue(result.isSuccessful(), "Extensions list command didn't work. Output: " + result.getOutput());
+        return result;
+    }
+
     public static class CreateApplicationRequest {
         private String platformBom;
         private String stream;
         private String[] extensions;
         private String[] extraArgs;
+        private ManagedResourceCreator managedResourceCreator = (serviceContext,
+                quarkusCliClient) -> managedResourceBuilder -> new CliDevModeLocalhostQuarkusApplicationManagedResource(
+                        serviceContext, quarkusCliClient);
 
         public CreateApplicationRequest withPlatformBom(String platformBom) {
             this.platformBom = platformBom;
             return this;
+        }
+
+        public CreateApplicationRequest withCurrentPlatformBom() {
+            return withPlatformBom(getCurrentPlatformBom());
         }
 
         public CreateApplicationRequest withStream(String stream) {
@@ -215,8 +317,41 @@ public class QuarkusCliClient {
             return this;
         }
 
+        public CreateApplicationRequest withManagedResourceCreator(ManagedResourceCreator managedResourceCreator) {
+            this.managedResourceCreator = managedResourceCreator;
+            return this;
+        }
+
         public static CreateApplicationRequest defaults() {
-            return new CreateApplicationRequest();
+            if (isUpstream()) {
+                // set platform due to https://github.com/quarkusio/quarkus/issues/40951#issuecomment-2147399201
+                return new CreateApplicationRequest().withCurrentPlatformBom();
+            }
+            // set fixed stream because if tested stream is not the latest stream, we would create app with wrong version
+            return new CreateApplicationRequest().withStream(getFixedStreamVersion());
+        }
+    }
+
+    public interface ManagedResourceCreator {
+        ManagedResourceBuilder initBuilder(ServiceContext serviceContext, QuarkusCliClient quarkusCliClient);
+    }
+
+    public static class UpdateApplicationRequest {
+        private String stream;
+        private String platformVersion;
+
+        public UpdateApplicationRequest withStream(String stream) {
+            this.stream = stream;
+            return this;
+        }
+
+        public UpdateApplicationRequest withPlatformVersion(String platformVersion) {
+            this.platformVersion = platformVersion;
+            return this;
+        }
+
+        public static UpdateApplicationRequest defaultUpdate() {
+            return new UpdateApplicationRequest();
         }
     }
 
@@ -224,6 +359,10 @@ public class QuarkusCliClient {
         private String platformBom;
         private String stream;
         private String[] extraArgs;
+
+        public CreateExtensionRequest withCurrentPlatformBom() {
+            return withPlatformBom(getCurrentPlatformBom());
+        }
 
         public CreateExtensionRequest withPlatformBom(String platformBom) {
             this.platformBom = platformBom;
@@ -241,7 +380,11 @@ public class QuarkusCliClient {
         }
 
         public static CreateExtensionRequest defaults() {
-            return new CreateExtensionRequest();
+            if (isUpstream()) {
+                return new CreateExtensionRequest().withCurrentPlatformBom();
+            }
+            // set fixed stream because if tested stream is not the latest stream, we would create app with wrong version
+            return new CreateExtensionRequest().withStream(getFixedStreamVersion());
         }
     }
 
@@ -262,6 +405,16 @@ public class QuarkusCliClient {
 
         public boolean isSuccessful() {
             return EXIT_SUCCESS == exitCode;
+        }
+    }
+
+    public record ListExtensionRequest(String stream) {
+        public static ListExtensionRequest defaults() {
+            return new ListExtensionRequest(isUpstream() ? null : getFixedStreamVersion());
+        }
+
+        public static ListExtensionRequest withSetStream() {
+            return new ListExtensionRequest(isUpstream() ? QUARKUS_UPSTREAM_VERSION : getFixedStreamVersion());
         }
     }
 }
